live the spartan life

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,8 +19,8 @@ set -g message-command-style bg=colour0,fg=colour7
 set -g message-style bg=colour0,fg=colour7
 set -g status-style bg=colour0,fg=colour7
 set -g status-left '#[bg=colour8,fg=colour6] #S '
-set -g status-left-length 50
 set -g status-right '#[bg=colour8,fg=colour6] %a %b %Oe%l:%M%p '
+set -g status-left-length 50
 set -g status-right-length 50
 set -g pane-border-style 'fg=colour0 bg=colour0'
 set -g pane-active-border-style 'fg=colour8 bg=colour8'
@@ -34,6 +34,8 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 unbind -a
 
 bind d detach
+bind c clear-history
+bind r source-file ~/.tmux.conf
 bind : command-prompt
 bind . command-prompt 'rename-session %%'
 bind , command-prompt 'rename-window %%'
@@ -43,11 +45,10 @@ bind [ copy-mode
 bind ] paste-buffer
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
-
 bind q kill-pane
 bind Q kill-window
 bind t new-window -ac '#{pane_current_path}'
-bind s split-window -vc '#{pane_current_path}'
+bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
 bind v split-window -hc '#{pane_current_path}'
 bind p previous-window
 bind n next-window
