--- a/tmux.conf
+++ b/tmux.conf
@@ -31,10 +31,19 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 # Bindings
 #
 
-bind c clear-history
 bind r source-file ~/.tmux.conf
+bind c clear-history
+bind t new-window
+bind s split-window -h
+bind v split-window
 bind P swap-window -t -1
 bind N swap-window -t +1
+bind h resize-pane -L 10
+bind j resize-pane -D 10
+bind k resize-pane -U 10
+bind l resize-pane -R 10
+bind q kill-pane
+bind Q kill-window
 
 #
 # Plugins
