make tmux and vim splits align because im ocd

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,8 +34,8 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 bind r source-file ~/.tmux.conf
 bind c clear-history
 bind t new-window
-bind s split-window -h
-bind v split-window
+bind s split-window \; resize-pane -U 1
+bind v split-window -h
 bind P swap-window -t -1
 bind N swap-window -t +1
 bind h resize-pane -L 10
