--- a/tmux.conf
+++ b/tmux.conf
@@ -33,9 +33,9 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 
 bind r source-file ~/.tmux.conf
 bind c clear-history
-bind t new-window
-bind s split-window \; resize-pane -U 1
-bind v split-window -h
+bind t new-window -ac '#{pane_current_path}'
+bind s split-window -ac '#{pane_current_path}' \; resize-pane -U 1
+bind v split-window -hc '#{pane_current_path}'
 bind P swap-window -t -1
 bind N swap-window -t +1
 bind h resize-pane -L 10
