fix date formatting in status

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ set -g message-command-style bg=colour0,fg=colour7
 set -g message-style bg=colour0,fg=colour7
 set -g status-style bg=colour0,fg=colour7
 set -g status-left '#[bg=colour8,fg=colour6] #S '
-set -g status-right '#[bg=colour8,fg=colour6] %a %b %Oe%l:%M%p '
+set -g status-right '#[bg=colour8,fg=colour6] %a %b %Oe %l:%M%p '
 set -g status-left-length 50
 set -g status-right-length 50
 set -g pane-border-style 'fg=colour0 bg=colour0'
@@ -34,7 +34,7 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 bind r source-file ~/.tmux.conf
 bind c clear-history
 bind t new-window -ac '#{pane_current_path}'
-bind s split-window -ac '#{pane_current_path}' \; resize-pane -U 1
+bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
 bind v split-window -hc '#{pane_current_path}'
 bind P swap-window -t -1
 bind N swap-window -t +1
