--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,6 +1,7 @@
 {
-  "diagnostic.errorSign": "❯",
-  "diagnostic.hintSign": "❯",
-  "diagnostic.infoSign": "❯",
-  "diagnostic.warningSign": "❯"
+    "coc.preferences.hoverTarget": "preview",
+    "diagnostic.errorSign": "❯",
+    "diagnostic.hintSign": "❯",
+    "diagnostic.infoSign": "❯",
+    "diagnostic.warningSign": "❯"
 }
