update coc config and make preview/help window height consistent

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,5 +1,6 @@
 {
     "coc.preferences.hoverTarget": "preview",
+    "coc.preferences.previewAutoClose": false,
     "diagnostic.errorSign": "❯",
     "diagnostic.hintSign": "❯",
     "diagnostic.infoSign": "❯",
