just keep alacritty in the dotfiles

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,17 +15,19 @@ bind C-Space send-prefix
 
 set -g mode-keys vi
 set -g default-terminal 'tmux-256color'
-set -g message-command-style bg=colour0,fg=colour7
-set -g message-style bg=colour0,fg=colour7
-set -g status-style bg=colour0,fg=colour7
+set -g base-index 1
+set -g renumber-windows on
+set -g message-command-style 'bg=colour0,fg=colour7'
+set -g message-style 'bg=colour0,fg=colour7'
+set -g status-style 'bg=colour0,fg=colour7'
 set -g status-left '#[bg=colour8,fg=colour6] #S '
 set -g status-right '#[bg=colour8,fg=colour6] %a %b %e%l:%M%p '
 set -g status-left-length 50
 set -g status-right-length 50
 set -g pane-border-style 'fg=colour0 bg=colour0'
 set -g pane-active-border-style 'fg=colour8 bg=colour8'
-set -g window-status-format '#[bg=colour0,fg=colour7] #W '
-set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
+set -g window-status-format '#[bg=colour0,fg=colour4] #I:#W '
+set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
 
 #
 # Bindings
@@ -33,6 +35,7 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #W '
 
 bind r source-file ~/.tmux.conf
 bind c clear-history
+bind BSpace last-window
 bind t new-window -ac '#{pane_current_path}'
 bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
 bind v split-window -hc '#{pane_current_path}'
