build config back up a bit

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,10 +9,6 @@
 # Settings
 #
 
-unbind C-b
-set-option -g prefix C-Space
-bind C-Space send-prefix
-
 set -g base-index 1
 set -g default-terminal 'tmux-256color'
 set -g message-command-style 'bg=colour0,fg=colour7'
@@ -20,10 +16,11 @@ set -g message-style 'bg=colour0,fg=colour7'
 set -g mode-keys vi
 set -g pane-border-style 'fg=colour0 bg=colour0'
 set -g pane-active-border-style 'fg=colour8 bg=colour8'
+set -g prefix C-Space
 set -g renumber-windows on
 set -g status-left '#[bg=colour8,fg=colour6] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=colour8,fg=colour6] %a %b %e%l:%M%p '
+set -g status-right '#[bg=colour8,fg=colour6] %a %b %e %l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=colour0,fg=colour7'
 set -g window-status-format '#[bg=colour0,fg=colour4] #I:#W '
@@ -33,20 +30,43 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
 # Bindings
 #
 
+unbind -a
+
+bind ? list-keys
+bind . command-prompt 'rename-session %%'
+bind , command-prompt 'rename-window %%'
+bind [ copy-mode
+bind ] paste-buffer
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+bind BSpace last-window
 bind r source-file ~/.tmux.conf
 bind c clear-history
-bind BSpace last-window
+bind d detach-client
+
+bind 1 select-window -t :1
+bind 2 select-window -t :2
+bind 3 select-window -t :3
+bind 4 select-window -t :4
+bind 5 select-window -t :5
+bind 6 select-window -t :6
+bind 7 select-window -t :7
+bind 8 select-window -t :8
+bind 9 select-window -t :9
+
+bind q kill-pane
+bind Q kill-window
 bind t new-window -ac '#{pane_current_path}'
 bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
 bind v split-window -hc '#{pane_current_path}'
-bind q kill-pane
-bind Q kill-window
+bind p previous-window
+bind n next-window
 bind P swap-window -t -1
 bind N swap-window -t +1
-bind h resize-pane -L 10
-bind j resize-pane -D 10
-bind k resize-pane -U 10
-bind l resize-pane -R 10
+bind h resize-pane -L 5
+bind j resize-pane -D 5
+bind k resize-pane -U 5
+bind l resize-pane -R 5
 
 #
 # Plugins
