refactor maps and plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 #
-# Tmux Config
+# Tmux
 #
 # :: Settings
 # :: Bindings
@@ -20,7 +20,7 @@ set -g prefix C-Space
 set -g renumber-windows on
 set -g status-left '#[bg=colour8,fg=colour6] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=colour8,fg=colour6] %a %b %e %l:%M%p '
+set -g status-right '#[bg=colour8,fg=colour6] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=colour0,fg=colour7'
 set -g window-status-format '#[bg=colour0,fg=colour4] #I:#W '
