--- a/git/config
+++ b/git/config
@@ -18,11 +18,11 @@
     un = reset HEAD --
     who = !git config user.name && git config user.email
 [core]
-    editor = vim
+    editor = nvim
 [credential]
     helper = cache --timeout=3600
 [diff]
-    tool = vimdiff
+    tool = nvim -d
 [user]
     name = Liam Butterworth
     email = liambutterworth@randallreilly.com
