--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -2,5 +2,6 @@
     "diagnostic.errorSign": "❯",
     "diagnostic.hintSign": "❯",
     "diagnostic.infoSign": "❯",
-    "diagnostic.warningSign": "❯"
+    "diagnostic.warningSign": "❯",
+    "snippets.userSnippetsDirectory": "~/.config/nvim/snips"
 }
