replace screen-256color with tmux-256color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,7 @@
 #
 
 set -g base-index 1
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'tmux-256color'
 set -g terminal-overrides ',*256col*:Tc'
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
