add correct references to used dirs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,6 +57,7 @@ bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -R 5
 
+bind 0 select-window -t :0
 bind 1 select-window -t :1
 bind 2 select-window -t :2
 bind 3 select-window -t :3
