simplify config; focus on gnu

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,7 @@
 
 set -g base-index 1
 set -g default-terminal 'screen-256color'
-set -g terminal-overrides ',*256col*:Tc'
+# set -g escape-time 10
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
 set -g mode-keys vi
@@ -24,6 +24,7 @@ set -g status-left-length 50
 set -g status-right '#[bg=colour8,fg=colour6] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=colour0,fg=colour7'
+set -g terminal-overrides ',*256col*:Tc'
 set -g window-status-format '#[bg=colour0,fg=colour4] #I:#W '
 set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
 
