remove lexima and clean up vim plugins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,7 @@
 
 set -g base-index 1
 set -g default-terminal 'screen-256color'
-# set -g escape-time 10
+set -gs escape-time 10
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
 set -g mode-keys vi
