--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -15,6 +15,8 @@
 # Bindings
 #
 
+alt_send_esc: true
+
 key_bindings:
   - { key: V, mods: Command, action: Paste }
   - { key: C, mods: Command, action: Copy }
@@ -25,29 +27,6 @@ key_bindings:
 #
 # Colors
 #
-
-# colors:
-#   primary:
-#     background: '0x282828'
-#     foreground: '0xebdbb2'
-#   normal:
-#     black: '0x282828'
-#     red: '0xcc241d'
-#     green: '0x98971a'
-#     yellow: '0xd79921'
-#     blue: '0x458588'
-#     magenta: '0xb16286'
-#     cyan: '0x689d6a'
-#     white: '0xa89984'
-#   bright:
-#     black: '0x928374'
-#     red: '0xfb4934'
-#     green: '0xb8bb26'
-#     yellow: '0xfabd2f'
-#     blue: '0x83a598'
-#     magenta: '0xd3869b'
-#     cyan: '0x8ec07c'
-#     white: '0xebdbb2'
 
 colors:
     primary:
@@ -150,6 +129,8 @@ selection:
 # Window
 #
 
+background_opacity: 0.96
+
 window:
   dimensions:
     columns: 0
@@ -159,5 +140,3 @@ window:
     y: 0
   decorations: buttonless
   startup_mode: SimpleFullscreen
-
-background_opacity: 0.96
