--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,7 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
 
 unbind -a
 
+bind : command-prompt
 bind . command-prompt 'rename-session %%'
 bind , command-prompt 'rename-window %%'
 bind [ copy-mode
@@ -41,7 +42,7 @@ bind ] paste-buffer
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 bind BSpace last-window
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 bind c clear-history
 bind d detach-client
 
