--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,10 +41,11 @@ bind [ copy-mode
 bind ] paste-buffer
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
+bind Space choose-tree
 bind BSpace last-window
-bind r source-file ~/.config/tmux/tmux.conf
 bind c clear-history
 bind d detach-client
+bind r source-file ~/.config/tmux/tmux.conf
 
 bind q kill-pane
 bind t new-window -ac '#{pane_current_path}'
