--- a/git/config
+++ b/git/config
@@ -7,6 +7,7 @@
     b = branch
     c = commit -m
     ca = commit --amend
+    cl = clone
     co = checkout
     d = diff
     dir = rev-parse --show-toplevel
