make clean bind run the clear command; increase resize-pane amount

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,8 +28,6 @@ set -g terminal-overrides ',*256col*:Tc'
 set -g window-status-format '#[bg=colour0,fg=colour4] #I:#W '
 set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
 
-new-session
-
 #
 # Bindings
 #
@@ -45,7 +43,7 @@ bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 bind Space choose-tree
 bind BSpace last-window
-bind c clear-history
+bind c send-keys -R \; send-keys C-l \; clear-history
 bind d detach-client
 bind r source-file ~/.config/tmux/tmux.conf
 
@@ -57,10 +55,10 @@ bind p previous-window
 bind n next-window
 bind P swap-window -t -1
 bind N swap-window -t +1
-bind h resize-pane -L 5
-bind j resize-pane -D 5
-bind k resize-pane -U 5
-bind l resize-pane -R 5
+bind h resize-pane -L 20
+bind j resize-pane -D 20
+bind k resize-pane -U 20
+bind l resize-pane -R 20
 
 bind 0 select-window -t :0
 bind 1 select-window -t :1
