--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,30 +34,32 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
 
 unbind -a
 
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
+
 bind : command-prompt
 bind . command-prompt 'rename-session %%'
 bind , command-prompt 'rename-window %%'
 bind [ copy-mode
 bind ] paste-buffer
-bind -T copy-mode-vi 'v' send-keys -X begin-selection
-bind -T copy-mode-vi 'y' send-keys -X copy-selection
 bind Space choose-tree
-bind BSpace last-window
-bind c send-keys -R \; send-keys C-l \; clear-history
+bind BSpace switch-client -l
 bind d detach-client
+bind c send-keys -R \; send-keys C-l \; clear-history
 bind r source-file ~/.config/tmux/tmux.conf
-
 bind q kill-pane
-bind t new-window -ac '#{pane_current_path}'
+bind o break-pane
 bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
 bind v split-window -hc '#{pane_current_path}'
+bind t new-window -ac '#{pane_current_path}'
 bind p previous-window
 bind n next-window
 bind P swap-window -t -1
 bind N swap-window -t +1
 bind h resize-pane -L 20
-bind j resize-pane -D 20
-bind k resize-pane -U 20
+bind j resize-pane -D 5
+bind k resize-pane -U 5
 bind l resize-pane -R 20
 
 bind 0 select-window -t :0
