update maps and binds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,15 +34,18 @@ set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
 
 unbind -a
 
-bind -T copy-mode-vi 'v' send-keys -X begin-selection
-bind -T copy-mode-vi 'y' send-keys -X copy-selection
-bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
-
 bind : command-prompt
-bind . command-prompt 'rename-session %%'
-bind , command-prompt 'rename-window %%'
+bind . command-prompt "rename-session '%%'"
+bind , command-prompt "rename-window '%%'"
+bind = choose-buffer
+bind - delete-buffer
 bind [ copy-mode
 bind ] paste-buffer
+bind { swap-pane -U
+bind } swap-pane -D
+bind ( switch-client -p
+bind ) switch-client -n
+bind Enter command-prompt "new-session -s '%%'"
 bind Space choose-tree
 bind BSpace switch-client -l
 bind d detach-client
@@ -61,6 +64,10 @@ bind h resize-pane -L 20
 bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -R 20
+
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
 
 bind 0 select-window -t :0
 bind 1 select-window -t :1
