--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -68,6 +68,8 @@ bind l resize-pane -R 20
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
+bind -T copy-mode-vi 'up' send-keys -X page-up
+bind -T copy-mode-vi 'down' send-keys -X page-down
 
 bind 0 select-window -t :0
 bind 1 select-window -t :1
@@ -98,3 +100,11 @@ bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
+bind-key -n C-left if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-down if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-up if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-right if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -T copy-mode-vi C-left select-pane -L
+bind-key -T copy-mode-vi C-up select-pane -D
+bind-key -T copy-mode-vi C-down select-pane -U
+bind-key -T copy-mode-vi C-right select-pane -R
