--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,8 +41,6 @@ bind = choose-buffer
 bind - delete-buffer
 bind [ copy-mode
 bind ] paste-buffer
-bind { swap-pane -U
-bind } swap-pane -D
 bind ( switch-client -p
 bind ) switch-client -n
 bind Enter command-prompt "new-session -s '%%'"
@@ -58,8 +56,8 @@ bind v split-window -hc '#{pane_current_path}'
 bind t new-window -ac '#{pane_current_path}'
 bind p previous-window
 bind n next-window
-bind P swap-window -t -1
-bind N swap-window -t +1
+bind P swap-window -t -1 \; previous-window
+bind N swap-window -t +1 \; next-window
 bind h resize-pane -L 20
 bind j resize-pane -D 5
 bind k resize-pane -U 5
@@ -90,21 +88,17 @@ bind 9 select-window -t :9
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
-bind-key -n C-left if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-down if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-up if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-right if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -T copy-mode-vi C-left select-pane -L
-bind-key -T copy-mode-vi C-up select-pane -D
-bind-key -T copy-mode-vi C-down select-pane -U
-bind-key -T copy-mode-vi C-right select-pane -R
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
