--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,18 +15,18 @@ set -gs escape-time 10
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
 set -g mode-keys vi
-set -g pane-border-style 'fg=colour0 bg=colour0'
-set -g pane-active-border-style 'fg=colour8 bg=colour8'
+set -g pane-border-style 'fg=#32302f bg=#32302f'
+set -g pane-active-border-style 'fg=#3c3836 bg=#3c3836'
 set -g prefix C-Space
 set -g renumber-windows on
-set -g status-left '#[bg=colour8,fg=colour6] #S '
+set -g status-left '#[bg=#3c3836,fg=#ebdbb2] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=colour8,fg=colour6] %a %b %e %-l:%M%p '
+set -g status-right '#[bg=#3c3836,fg=#ebdbb2] %a %b %e %-l:%M%p '
 set -g status-right-length 50
-set -g status-style 'bg=colour0,fg=colour7'
+set -g status-style 'bg=#282828,fg=#ebdbb2'
 set -g terminal-overrides ',*256col*:Tc'
-set -g window-status-format '#[bg=colour0,fg=colour4] #I:#W '
-set -g window-status-current-format '#[bg=colour8,fg=colour6] #I:#W '
+set -g window-status-format '#[bg=#282828,fg=#ebdbb2] #I:#W '
+set -g window-status-current-format '#[bg=#3c3836,fg=#ebdbb2] #I:#W '
 
 #
 # Bindings
