--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,23 +10,23 @@
 #
 
 set -g base-index 1
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'tmux-256color'
 set -gs escape-time 10
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
 set -g mode-keys vi
-set -g pane-border-style 'fg=#32302f bg=#32302f'
-set -g pane-active-border-style 'fg=#3c3836 bg=#3c3836'
+set -g pane-border-style 'bg=#3f3f3f,fg=#3f3f3f'
+set -g pane-active-border-style 'bg=#4f4f4f,fg=#4f4f4f'
 set -g prefix C-Space
 set -g renumber-windows on
-set -g status-left '#[bg=#3c3836,fg=#ebdbb2] #S '
+set -g status-left '#[bg=#939393,fg=#2a2a2a,bold] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=#3c3836,fg=#ebdbb2] %a %b %e %-l:%M%p '
+set -g status-right '#[bg=#939393,fg=#2a2a2a,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
-set -g status-style 'bg=#282828,fg=#ebdbb2'
+set -g status-style 'bg=#3d3d3d,fg=#ebdbb2'
 set -g terminal-overrides ',*256col*:Tc'
-set -g window-status-format '#[bg=#282828,fg=#ebdbb2] #I:#W '
-set -g window-status-current-format '#[bg=#3c3836,fg=#ebdbb2] #I:#W '
+set -g window-status-format '#[bg=#3d3d3d,fg=#939393] #I:#W '
+set -g window-status-current-format '#[bg=#4f4f4f,fg=#939393] #I:#W '
 
 #
 # Bindings
