refine tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,7 @@ set -g status-style 'bg=#3d3d3d,fg=#ebdbb2'
 set -g terminal-overrides ',*256col*:Tc'
 set -g window-status-format '#[bg=#3d3d3d,fg=#939393] #I:#W '
 set -g window-status-current-format '#[bg=#4f4f4f,fg=#939393] #I:#W '
+set -g message-style 'bg=#3d3d3d,fg=#939393'
 
 #
 # Bindings
@@ -41,11 +42,9 @@ bind = choose-buffer
 bind - delete-buffer
 bind [ copy-mode
 bind ] paste-buffer
-bind ( switch-client -p
-bind ) switch-client -n
 bind Enter command-prompt "new-session -s '%%'"
-bind Space choose-tree
-bind BSpace switch-client -l
+bind Space choose-tree -sZ -F '#{window_name}'
+bind BSpace last-window
 bind d detach-client
 bind c send-keys -R \; send-keys C-l \; clear-history
 bind r source-file ~/.config/tmux/tmux.conf
@@ -54,22 +53,19 @@ bind o break-pane
 bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
 bind v split-window -hc '#{pane_current_path}'
 bind t new-window -ac '#{pane_current_path}'
-bind p previous-window
-bind n next-window
-bind P swap-window -t -1 \; previous-window
-bind N swap-window -t +1 \; next-window
-bind h resize-pane -L 20
-bind j resize-pane -D 5
-bind k resize-pane -U 5
-bind l resize-pane -R 20
-
+bind -r p previous-window
+bind -r n next-window
+bind -r P swap-window -t -1 \; previous-window
+bind -r N swap-window -t +1 \; next-window
+bind -r h resize-pane -L 20
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 20
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
 bind -T copy-mode-vi 'up' send-keys -X page-up
 bind -T copy-mode-vi 'down' send-keys -X page-down
-
-bind 0 select-window -t :0
 bind 1 select-window -t :1
 bind 2 select-window -t :2
 bind 3 select-window -t :3
@@ -79,6 +75,7 @@ bind 6 select-window -t :6
 bind 7 select-window -t :7
 bind 8 select-window -t :8
 bind 9 select-window -t :9
+bind 0 select-window -t :0
 
 #
 # Plugins
