readd statusline and finally solve the annoying vi mode fish duplicate console thing

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,6 @@
 # Settings
 #
 
-set -g base-index 1
 set -g default-terminal 'tmux-256color'
 set -gs escape-time 10
 set -g message-command-style 'bg=colour0,fg=colour7'
@@ -44,7 +43,7 @@ bind [ copy-mode
 bind ] paste-buffer
 bind Enter command-prompt "new-session -s '%%'"
 bind Space choose-tree -sZ -F '#{window_name}'
-bind BSpace last-window
+bind BSpace switch-client -l
 bind d detach-client
 bind c send-keys -R \; send-keys C-l \; clear-history
 bind r source-file ~/.config/tmux/tmux.conf
