update nerdtree config and improve vim syntax highlighting

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,19 +14,19 @@ set -gs escape-time 10
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
 set -g mode-keys vi
-set -g pane-border-style 'bg=#3f3f3f,fg=#3f3f3f'
-set -g pane-active-border-style 'bg=#4f4f4f,fg=#4f4f4f'
+set -g pane-border-style 'bg=#3c3836,fg=#3c3836'
+set -g pane-active-border-style 'bg=#665c54,fg=#665c54'
 set -g prefix C-Space
 set -g renumber-windows on
-set -g status-left '#[bg=#939393,fg=#2a2a2a,bold] #S '
+set -g status-left '#[bg=#a89984,fg=#282828,bold] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=#939393,fg=#2a2a2a,bold] %a %b %e %-l:%M%p '
+set -g status-right '#[bg=#a89984,fg=#282828,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
-set -g status-style 'bg=#3d3d3d,fg=#ebdbb2'
+set -g status-style 'bg=#3c3836,fg=#a89984'
 set -g terminal-overrides ',*256col*:Tc'
-set -g window-status-format '#[bg=#3d3d3d,fg=#939393] #I:#W '
-set -g window-status-current-format '#[bg=#4f4f4f,fg=#939393] #I:#W '
-set -g message-style 'bg=#3d3d3d,fg=#939393'
+set -g window-status-format '#[bg=#3c3836,fg=#a89984] #I:#W '
+set -g window-status-current-format '#[bg=#504945,fg=#a89984] #I:#W '
+set -g message-style 'bg=#3c3836,fg=#a89984'
 
 #
 # Bindings
