--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,7 @@ set -g terminal-overrides ',*256col*:Tc'
 set -g window-status-format '#[bg=#3c3836,fg=#a89984] #I:#W '
 set -g window-status-current-format '#[bg=#504945,fg=#a89984] #I:#W '
 set -g message-style 'bg=#3c3836,fg=#a89984'
+set -g history-limit 5000
 
 #
 # Bindings
