--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,8 +9,9 @@
 # Settings
 #
 
-set -g default-terminal 'tmux-256color'
+set -g default-terminal "tmux-256color"
 set -gs escape-time 10
+set -g history-limit 5000
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
 set -g mode-keys vi
@@ -23,11 +24,11 @@ set -g status-left-length 50
 set -g status-right '#[bg=#a89984,fg=#282828,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=#3c3836,fg=#a89984'
-set -g terminal-overrides ',*256col*:Tc'
-set -g window-status-format '#[bg=#3c3836,fg=#a89984] #I:#W '
-set -g window-status-current-format '#[bg=#504945,fg=#a89984] #I:#W '
-set -g message-style 'bg=#3c3836,fg=#a89984'
-set -g history-limit 5000
+set -g terminal-overrides ",xterm-256color:Tc"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set -g window-status-format '#[bg=#3c3836,fg=#ebdbb2] #I:#W '
+set -g window-status-current-format '#[bg=#504945,fg=#ebdbb2] #I:#W '
+set -g message-style 'bg=#3c3836,fg=#ebdbb2'
 
 #
 # Bindings
