--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -9,14 +9,11 @@
 # :: Mouse
 # :: Scrolling
 # :: Selection
-# :: Shell
 # :: Window
 
 #
 # Bindings
 #
-
-alt_send_esc: true
 
 # key_bindings:
 #   - { key: V, mods: Command, action: Paste }
@@ -28,32 +25,6 @@ alt_send_esc: true
 #
 # Colors
 #
-
-# colors: # Nord - Dark
-#     primary:
-#       background: '0x2E3440'
-#       foreground: '0xD8DEE9'
-#     cursor:
-#       text: '0x2E3440'
-#       cursor: '0xD8DEE9'
-#     normal:
-#       black: '0x3B4252'
-#       red: '0xBF616A'
-#       green: '0xA3BE8C'
-#       yellow: '0xEBCB8B'
-#       blue: '0x81A1C1'
-#       magenta: '0xB48EAD'
-#       cyan: '0x88C0D0'
-#       white: '0xE5E9F0'
-#     bright:
-#       black: '0x4C566A'
-#       red: '0xBF616A'
-#       green: '0xA3BE8C'
-#       yellow: '0xEBCB8B'
-#       blue: '0x81A1C1'
-#       magenta: '0xB48EAD'
-#       cyan: '0x8FBCBB'
-#       white: '0xECEFF4'
 
 colors: # Gruvbox - Dark
   primary:
@@ -102,27 +73,23 @@ debug:
 # Font
 #
 
-# font:
-#   use_thin_strokes: true
-#   size: 20
-#   normal:
-#     family: Source Code Pro
-#     style: Light
-#   bold:
-#     family: Source Code Pro
-#     style: Regular
-#   italic:
-#     family: Source Code Pro
-#     style: Light Italic
-#   bold_italic:
-#     family: Source Code Pro
-#     style: Italic
-#   offset:
-#     x: 1
-#     y: 30
-#   glyph_offset:
-#     x: 0
-#     y: 15
+font:
+  size: 12
+  normal:
+    family: Source Code Pro
+    style: Regular
+  bold:
+    family: Source Code Pro
+    style: Bold
+  italic:
+    family: Source Code Pro
+    style: Light Italic
+  bold_italic:
+    family: Source Code Pro
+    style: Italic
+  offset:
+    x: 0
+    y: 4
 
 #
 # Mouse
@@ -155,13 +122,3 @@ selection:
 #
 
 background_opacity: 0.99
-
-# window:
-#   dimensions:
-#     columns: 0
-#     lines: 0
-#   padding:
-#     x: 0
-#     y: 0
-#   decorations: buttonless
-#   startup_mode: SimpleFullscreen
