--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .DS_Store
 docker/.buildNodeID
 docker/.token*
-fish/conf.d
-fish/completions
 fish/fish_variables
 fish/functions
+fish/profile.fish
 vim/autoload/plug.vim
 vim/plugged
