--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,8 @@
 # Settings
 #
 
+# new-session -n $HOST
+
 set -g default-terminal "tmux-256color"
 set -gs escape-time 10
 set -g history-limit 5000
