--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,8 +28,8 @@ set -g status-right-length 50
 set -g status-style 'bg=#3c3836,fg=#a89984'
 set -g terminal-overrides ",xterm-256color:Tc"
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
-set -g window-status-format '#[bg=#3c3836,fg=#ebdbb2] #I:#W '
-set -g window-status-current-format '#[bg=#504945,fg=#ebdbb2] #I:#W '
+set -g window-status-format '#[bg=#3c3836,fg=#ebdbb2] #W '
+set -g window-status-current-format '#[bg=#504945,fg=#ebdbb2] #W '
 set -g message-style 'bg=#3c3836,fg=#ebdbb2'
 
 #
