--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -77,7 +77,7 @@ debug:
 #
 
 font:
-  size: 14
+  size: 16
   normal:
     family: Source Code Pro
     style: Light
@@ -91,6 +91,9 @@ font:
     family: Source Code Pro
     style: Italic
   offset:
+    x: 0
+    y: 8
+  glyph_offset:
     x: 0
     y: 4
 
