--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -17,6 +17,7 @@
 #
 
 background_opacity: 0.99
+draw_bold_text_with_bright_colors: false
 
 #
 # Bindings
@@ -33,25 +34,27 @@ colors:
   primary:
     background: '0x282828'
     foreground: '0xebdbb2'
+  cursor:
+    text: '0x1d2021'
+    cursor: '0xd5c4a1'
   normal:
-    black:   '0x282828'
-    red:     '0xcc241d'
-    green:   '0x98971a'
-    yellow:  '0xd79921'
-    blue:    '0x458588'
-    magenta: '0xb16286'
-    cyan:    '0x689d6a'
-    white:   '0xa89984'
-  bright:
-    black:   '0x928374'
+    black:   '0x1d2021'
     red:     '0xfb4934'
     green:   '0xb8bb26'
     yellow:  '0xfabd2f'
     blue:    '0x83a598'
     magenta: '0xd3869b'
     cyan:    '0x8ec07c'
-    white:   '0xebdbb2'
-
+    white:   '0xd5c4a1'
+  bright:
+    black:   '0x665c54'
+    red:     '0xfe8019'
+    green:   '0x3c3836'
+    yellow:  '0x504945'
+    blue:    '0xbdae93'
+    magenta: '0xebdbb2'
+    cyan:    '0xd65d0e'
+    white:   '0xfbf1c7'
 
 #
 # Cursor
