--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,8 +9,9 @@
 # Settings
 #
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 set -gs escape-time 10
+set -g focus-events on
 set -g history-limit 5000
 set -g message-command-style 'bg=colour0,fg=colour7'
 set -g message-style 'bg=colour0,fg=colour7'
