--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,7 @@
 # Settings
 #
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -gs escape-time 10
 set -g focus-events on
 set -g history-limit 5000
@@ -25,8 +25,7 @@ set -g status-left-length 50
 set -g status-right '#[bg=#a89984,fg=#282828,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=#3c3836,fg=#a89984'
-set -g terminal-overrides ",xterm-256color:Tc"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set-option -sa terminal-overrides ",alacritty:RGB"
 set -g window-status-format '#[bg=#3c3836,fg=#ebdbb2] #W '
 set -g window-status-current-format '#[bg=#504945,fg=#ebdbb2] #W '
 set -g message-style 'bg=#3c3836,fg=#ebdbb2'
