format awesome config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,7 @@
 # Settings
 #
 
+set -g default-command /usr/bin/fish
 set -g default-terminal "tmux-256color"
 set -gs escape-time 10
 set -g focus-events on
@@ -25,7 +26,7 @@ set -g status-left-length 50
 set -g status-right '#[bg=#a89984,fg=#282828,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=#3c3836,fg=#a89984'
-set-option -sa terminal-overrides ",alacritty:RGB"
+set -sa terminal-overrides ",alacritty:RGB"
 set -g window-status-format '#[bg=#3c3836,fg=#ebdbb2] #W '
 set -g window-status-current-format '#[bg=#504945,fg=#ebdbb2] #W '
 set -g message-style 'bg=#3c3836,fg=#ebdbb2'
@@ -36,24 +37,6 @@ set -g message-style 'bg=#3c3836,fg=#ebdbb2'
 
 unbind -a
 
-bind : command-prompt
-bind . command-prompt "rename-session '%%'"
-bind , command-prompt "rename-window '%%'"
-bind = choose-buffer
-bind - delete-buffer
-bind [ copy-mode
-bind ] paste-buffer
-bind Enter command-prompt "new-session -s '%%'"
-bind Space choose-tree -sZ -F '#{window_name}'
-bind BSpace switch-client -l
-bind d detach-client
-bind c send-keys -R \; send-keys C-l \; clear-history
-bind r source-file ~/.config/tmux/tmux.conf
-bind q kill-pane
-bind o break-pane
-bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
-bind v split-window -hc '#{pane_current_path}'
-bind t new-window -ac '#{pane_current_path}'
 bind -r p previous-window
 bind -r n next-window
 bind -r P swap-window -t -1 \; previous-window
@@ -67,6 +50,24 @@ bind -T copy-mode-vi 'y' send-keys -X copy-selection
 bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
 bind -T copy-mode-vi 'up' send-keys -X page-up
 bind -T copy-mode-vi 'down' send-keys -X page-down
+bind : command-prompt
+bind . command-prompt "rename-session '%%'"
+bind , command-prompt "rename-window '%%'"
+bind = choose-buffer
+bind - delete-buffer
+bind [ copy-mode
+bind ] paste-buffer
+bind Enter command-prompt "new-session -s '%%'"
+bind Space choose-tree -sZ -F '#{window_name}'
+bind BSpace switch-client -l
+bind d detach-client
+bind l send-keys -R \; send-keys C-l \; clear-history
+bind r source-file ~/.config/tmux/tmux.conf
+bind q kill-pane
+bind o break-pane
+bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
+bind v split-window -hc '#{pane_current_path}'
+bind t new-window -ac '#{pane_current_path}'
 bind 1 select-window -t :1
 bind 2 select-window -t :2
 bind 3 select-window -t :3
