--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -8,6 +8,7 @@
 # :: Debug
 # :: Font
 # :: Mouse
+# :: Shell
 # :: Scrolling
 # :: Selection
 # :: Window
@@ -108,6 +109,13 @@ mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
   hide_when_typing: true
+
+#
+# Shell
+#
+
+shell:
+  program: fish
 
 #
 # Scrolling
