--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,7 +1,7 @@
 #
 # Alacritty
 #
-# :: Global
+# :: Globals
 # :: Bindings
 # :: Colors
 # :: Cursor
@@ -14,11 +14,10 @@
 # :: Window
 
 #
-# Global
+# Globals
 #
 
-background_opacity: 0.98
-draw_bold_text_with_bright_colors: false
+background_opacity: 0.96
 
 #
 # Bindings
@@ -33,29 +32,26 @@ draw_bold_text_with_bright_colors: false
 
 colors:
   primary:
-    background: '0x282828'
-    foreground: '0xebdbb2'
-  cursor:
-    text: '0x1d2021'
-    cursor: '0xd5c4a1'
+    background: '#242831'
+    foreground: '#d8dee9'
   normal:
-    black:   '0x1d2021'
-    red:     '0xfb4934'
-    green:   '0xb8bb26'
-    yellow:  '0xfabd2f'
-    blue:    '0x83a598'
-    magenta: '0xd3869b'
-    cyan:    '0x8ec07c'
-    white:   '0xd5c4a1'
+    black: '#3b4252'
+    red: '#bf616a'
+    green: '#a3be8c'
+    yellow: '#ebcb8b'
+    blue: '#81a1c1'
+    magenta: '#b48ead'
+    cyan: '#88c0d0'
+    white: '#e5e9f0'
   bright:
-    black:   '0x665c54'
-    red:     '0xfe8019'
-    green:   '0x3c3836'
-    yellow:  '0x504945'
-    blue:    '0xbdae93'
-    magenta: '0xebdbb2'
-    cyan:    '0xd65d0e'
-    white:   '0xfbf1c7'
+    black: '#4c566a'
+    red: '#bf616a'
+    green: '#a3be8c'
+    yellow: '#ebcb8b'
+    blue: '#81a1c1'
+    magenta: '#b48ead'
+    cyan: '#8fbcbb'
+    white: '#eceff4'
 
 #
 # Cursor
