--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,22 +14,22 @@ set -g default-terminal "tmux-256color"
 set -gs escape-time 10
 set -g focus-events on
 set -g history-limit 5000
-set -g message-command-style 'bg=colour0,fg=colour7'
-set -g message-style 'bg=colour0,fg=colour7'
+set -g message-command-style 'bg=black,fg=white'
+set -g message-style 'bg=black,fg=white'
 set -g mode-keys vi
-set -g pane-border-style 'bg=#3c3836,fg=#3c3836'
-set -g pane-active-border-style 'bg=#665c54,fg=#665c54'
+set -g pane-border-style "bg=black,fg=black"
+set -g pane-active-border-style 'bg=black,fg=black'
 set -g prefix C-Space
 set -g renumber-windows on
-set -g status-left '#[bg=#a89984,fg=#282828,bold] #S '
+set -g status-left '#[bg=gray,fg=black,bold] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=#a89984,fg=#282828,bold] %a %b %e %-l:%M%p '
+set -g status-right '#[bg=gray,fg=black,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
-set -g status-style 'bg=#3c3836,fg=#a89984'
+set -g status-style 'bg=black,fg=white'
 set -sa terminal-overrides ",alacritty:RGB"
-set -g window-status-format '#[bg=#3c3836,fg=#ebdbb2] #W '
-set -g window-status-current-format '#[bg=#504945,fg=#ebdbb2] #W '
-set -g message-style 'bg=#3c3836,fg=#ebdbb2'
+set -g window-status-format '#[bg=black,fg=blue] #W'
+set -g window-status-current-format '#[bg=black,fg=white] #W'
+set -g message-style 'bg=black,fg=white'
 
 #
 # Bindings
