--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,14 +21,14 @@ set -g pane-border-style "bg=black,fg=black"
 set -g pane-active-border-style 'bg=black,fg=black'
 set -g prefix C-Space
 set -g renumber-windows on
-set -g status-left '#[bg=gray,fg=black,bold] #S '
+set -g status-left '#[bg=white,fg=black,bold] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=gray,fg=black,bold] %a %b %e %-l:%M%p '
+set -g status-right '#[bg=white,fg=black,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=black,fg=white'
 set -sa terminal-overrides ",alacritty:RGB"
 set -g window-status-format '#[bg=black,fg=blue] #W'
-set -g window-status-current-format '#[bg=black,fg=white] #W'
+set -g window-status-current-format '#[bg=brblack,fg=cyan] #W'
 set -g message-style 'bg=black,fg=white'
 
 #
