build on simplified config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 #
 # :: Settings
 # :: Bindings
-# :: Plugins
+# :: Navigation
 
 #
 # Settings
@@ -21,14 +21,14 @@ set -g pane-border-style "bg=black,fg=black"
 set -g pane-active-border-style 'bg=black,fg=black'
 set -g prefix C-Space
 set -g renumber-windows on
-set -g status-left '#[bg=white,fg=black,bold] #S '
+set -g status-left '#[bg=blue,fg=black,bold] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=white,fg=black,bold] %a %b %e %-l:%M%p '
+set -g status-right '#[bg=blue,fg=black,bold] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=black,fg=white'
 set -sa terminal-overrides ",alacritty:RGB"
-set -g window-status-format '#[bg=black,fg=blue] #W'
-set -g window-status-current-format '#[bg=brblack,fg=cyan] #W'
+set -g window-status-format '#[bg=black,fg=white] #W '
+set -g window-status-current-format '#[bg=blue,fg=black,bold] #W '
 set -g message-style 'bg=black,fg=white'
 
 #
@@ -45,11 +45,13 @@ bind -r h resize-pane -L 20
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 20
+
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
 bind -T copy-mode-vi 'up' send-keys -X page-up
 bind -T copy-mode-vi 'down' send-keys -X page-down
+
 bind : command-prompt
 bind . command-prompt "rename-session '%%'"
 bind , command-prompt "rename-window '%%'"
@@ -68,6 +70,7 @@ bind o break-pane
 bind s split-window -vc '#{pane_current_path}' \; resize-pane -U 1
 bind v split-window -hc '#{pane_current_path}'
 bind t new-window -ac '#{pane_current_path}'
+
 bind 1 select-window -t :1
 bind 2 select-window -t :2
 bind 3 select-window -t :3
@@ -80,22 +83,25 @@ bind 9 select-window -t :9
 bind 0 select-window -t :0
 
 #
-# Plugins
+# Navigation
 #
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\' 'select-pane -l'"
+
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\' 'select-pane -l'"
+
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
