stash latest from mac

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,6 @@
 # Settings
 #
 
-set -g default-command /usr/bin/fish
 set -g default-terminal "tmux-256color"
 set -gs escape-time 10
 set -g focus-events on
@@ -21,14 +20,14 @@ set -g pane-border-style "bg=black,fg=black"
 set -g pane-active-border-style 'bg=black,fg=black'
 set -g prefix C-Space
 set -g renumber-windows on
-set -g status-left '#[bg=blue,fg=black,bold] #S '
+set -g status-left '#[bg=colour17,fg=white] #S '
 set -g status-left-length 50
-set -g status-right '#[bg=blue,fg=black,bold] %a %b %e %-l:%M%p '
+set -g status-right '#[bg=colour17,fg=white] %a %b %e %-l:%M%p '
 set -g status-right-length 50
 set -g status-style 'bg=black,fg=white'
 set -sa terminal-overrides ",alacritty:RGB"
 set -g window-status-format '#[bg=black,fg=white] #W '
-set -g window-status-current-format '#[bg=blue,fg=black,bold] #W '
+set -g window-status-current-format '#[bg=colour17,fg=white] #W '
 set -g message-style 'bg=black,fg=white'
 
 #
