--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,21 +36,6 @@ set -g message-style 'bg=black,fg=white'
 
 unbind -a
 
-bind -r p previous-window
-bind -r n next-window
-bind -r P swap-window -t -1 \; previous-window
-bind -r N swap-window -t +1 \; next-window
-bind -r h resize-pane -L 20
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 20
-
-bind -T copy-mode-vi 'v' send-keys -X begin-selection
-bind -T copy-mode-vi 'y' send-keys -X copy-selection
-bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
-bind -T copy-mode-vi 'up' send-keys -X page-up
-bind -T copy-mode-vi 'down' send-keys -X page-down
-
 bind : command-prompt
 bind . command-prompt "rename-session '%%'"
 bind , command-prompt "rename-window '%%'"
@@ -62,7 +47,7 @@ bind Enter command-prompt "new-session -s '%%'"
 bind Space choose-tree -sZ -F '#{window_name}'
 bind BSpace switch-client -l
 bind d detach-client
-bind l send-keys -R \; send-keys C-l \; clear-history
+bind c send-keys -R \; send-keys C-l \; clear-history
 bind r source-file ~/.config/tmux/tmux.conf
 bind q kill-pane
 bind o break-pane
@@ -80,6 +65,21 @@ bind 7 select-window -t :7
 bind 8 select-window -t :8
 bind 9 select-window -t :9
 bind 0 select-window -t :0
+
+bind -r p previous-window
+bind -r n next-window
+bind -r P swap-window -t -1 \; previous-window
+bind -r N swap-window -t +1 \; next-window
+bind -r h resize-pane -L 20
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 20
+
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+bind -T copy-mode-vi 'c' send-keys -X copy-pipe-and-cancel 'pbcopy'
+bind -T copy-mode-vi 'up' send-keys -X page-up
+bind -T copy-mode-vi 'down' send-keys -X page-down
 
 #
 # Navigation
